- Añadidos los mappers de penalizacion y pago, modificado el mapper de alquiler